--- a/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterTypeCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterTypeCollectionViewCell.xib
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="height" constant="26" id="huT-r9-3jI"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Charater" translatesAutoresizingMaskIntoConstraints="NO" id="RYh-B6-gKD">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RYh-B6-gKD">
                                 <rect key="frame" x="0.0" y="0.0" width="75" height="71"/>
                             </imageView>
                         </subviews>
@@ -61,7 +61,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Charater" width="60" height="60"/>
         <namedColor name="YellowButton2">
             <color red="1" green="0.88999998569488525" blue="0.60799998044967651" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
