--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -50,7 +50,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2H-8P-CbD">
-                                <rect key="frame" x="24" y="446" width="327" height="40"/>
+                                <rect key="frame" x="24" y="445.66666666666669" width="327" height="40"/>
                                 <color key="backgroundColor" name="DeepYellow"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="wcF-gd-1y5"/>
@@ -73,7 +73,7 @@
                             <constraint firstItem="8vR-cA-ldV" firstAttribute="top" secondItem="rSm-lZ-pqn" secondAttribute="bottom" constant="38" id="Oho-zs-jXC"/>
                             <constraint firstItem="rSm-lZ-pqn" firstAttribute="top" secondItem="07g-md-OcR" secondAttribute="bottom" constant="24" id="RXu-Bg-W0n"/>
                             <constraint firstItem="fH8-vg-Zu1" firstAttribute="top" secondItem="KnW-qp-7rg" secondAttribute="bottom" constant="12" id="V7c-fD-Zmi"/>
-                            <constraint firstItem="a2H-8P-CbD" firstAttribute="top" secondItem="KnW-qp-7rg" secondAttribute="bottom" constant="48" id="YwO-Uy-B8n"/>
+                            <constraint firstItem="a2H-8P-CbD" firstAttribute="top" secondItem="KnW-qp-7rg" secondAttribute="bottom" constant="47.659999999999997" id="YwO-Uy-B8n"/>
                             <constraint firstItem="a2H-8P-CbD" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="ca0-LA-zMa"/>
                             <constraint firstItem="rSm-lZ-pqn" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="d0d-mN-Rya"/>
                             <constraint firstItem="8vR-cA-ldV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="iHR-oS-b35"/>
