--- a/Mohaeng/Mohaeng/Resources/Storyboards/Home/Notification.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Home/Notification.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GmarketSansTTFMedium.ttf">
+            <string>GmarketSansTTFMedium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Notification View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -29,6 +34,12 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="앗, 알림이 없어요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ybV-4o-4d4">
+                                <rect key="frame" x="144.5" y="440" width="125" height="16"/>
+                                <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="16"/>
+                                <color key="textColor" name="Grey2"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -36,10 +47,13 @@
                             <constraint firstItem="0TE-0E-gpy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="JBg-C9-rs2"/>
                             <constraint firstItem="0TE-0E-gpy" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="Nlb-sU-4eb"/>
                             <constraint firstAttribute="bottom" secondItem="0TE-0E-gpy" secondAttribute="bottom" id="UgX-ES-MFa"/>
+                            <constraint firstItem="ybV-4o-4d4" firstAttribute="centerX" secondItem="0TE-0E-gpy" secondAttribute="centerX" id="aQ7-Z7-d5k"/>
+                            <constraint firstItem="ybV-4o-4d4" firstAttribute="centerY" secondItem="0TE-0E-gpy" secondAttribute="centerY" id="ecM-bC-XI9"/>
                             <constraint firstItem="0TE-0E-gpy" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="v0F-O2-0bu"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="emptyLabel" destination="ybV-4o-4d4" id="W8f-A9-dFB"/>
                         <outlet property="notificationCollectionView" destination="0TE-0E-gpy" id="egQ-W3-WmW"/>
                     </connections>
                 </viewController>
@@ -49,6 +63,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="Grey2">
+            <color red="0.48199999332427979" green="0.48199999332427979" blue="0.48199999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="YellowBg1">
             <color red="1" green="0.90600001811981201" blue="0.66299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
